# ska-mid-dish-manager

./: .gitignore  .gitlab-ci.yml  .gitmodules  .readthedocs.yaml  .release  CHANGELOG.rst  CODEOWNERS  Dockerfile  Makefile  PrivateRules.mak  README.md  demo-tracking.ipynb  mypy.ini  pyproject.toml
.gitlab/merge_request_templates/: karoo-template.md
build-with-custom-whl/: Dockerfile
charts/: sandbox.yaml
charts/ska-mid-dish-manager/: Chart.yaml  custom_helm_flags.yaml  custom_values.yaml  helm_flags.yaml  min_deployment_with_b5dc_proxy.yaml  minimal_deployment_helm_flags.yaml  minimal_deployment_with_b5dc_proxy.yaml  values.yaml
charts/ska-mid-dish-manager/charts/: ska-mid-dish-ds-manager-2.0.1.tgz  ska-mid-dish-simulators-0.0.4.tgz  ska-mid-dish-simulators-1.2.0.tgz  ska-mid-dish-simulators-4.0.3.tgz  ska-mid-dish-simulators-4.1.0.tgz  ska-tango-base-0.4.10.tgz  ska-tango-base-0.4.12.tgz  ska-tango-util-0.3.17.tgz  ska-tango-util-0.4.11.tgz  ska-tango-util-0.4.12.tgz  ska-tango-util-0.4.6.tgz
charts/ska-mid-dish-manager/data/: dish_manager.yaml  ds_device.yaml  dummy_device.yaml  spf_device.yaml  spfrx_device.yaml  test_dish_manager.yaml
charts/ska-mid-dish-manager/templates/: dev_pod.yml  deviceservers.yaml  dummy_device.yaml
docker-compose/: .env  README.md  config.json  dish-lmc-devices.yaml  tango-db.yml
docs/: requirements.txt
docs/src/: CHANGELOG.rst  LMC_diagram.uml  conf.py  generate_dish_mode_state_graph.ipynb  index.rst
docs/src/api/: dish_manager_interface.rst  dish_manager_interface.yaml  index.rst  release.rst  the_api.rst  utils.rst
docs/src/developer_guide/: abort_commands.rst  apply_pointing_model.rst  command_map_sequence_diagram.uml  component_managers.rst  dish_manager_design.rst  dish_manager_models.rst  index.rst  testing.rst
docs/src/guide/: abort_commands.rst  component_managers.rst  dish_manager_design.rst  dish_manager_guide.rst  dish_manager_models.rst  index.rst
docs/src/modules/: modules.rst  ska_mid_dish_manager.component_managers.rst  ska_mid_dish_manager.devices.rst  ska_mid_dish_manager.devices.test_devices.rst  ska_mid_dish_manager.models.rst  ska_mid_dish_manager.rst
docs/src/user_guide/: abort.rst  alarms.rst  apply_pointing_model.rst  getting_started.rst  how_to.rst  index.rst  tracking.rst  troubleshooting.rst  update_tz_data.rst
src/ska_dish_manager/: dish_manager.py
src/ska_mid_dish_manager/: DummyDevice.py  __init__.py  commands.py  dish_manager.py  release.py  utils.py
src/ska_mid_dish_manager/component_managers/: __init__.py  b5dc_cm.py  connection_manager.py  device_monitor.py  device_monitor_test_stats.yml  device_proxy_factory.py  dish_manager_cm.py  ds_cm.py  spf_cm.py  spfrx_cm.py  tango_device_cm.py  tango_device_component_manager.py  tmc_heartbeat_monitor.py  wms_cm.py
src/ska_mid_dish_manager/devices/: DishManagerDS.py  DummyDevice.py  dish_manager.py
src/ska_mid_dish_manager/interface/: input_validation.py
src/ska_mid_dish_manager/models/: __init__.py  abort_sequence_command_handler.py  action_handlers.py  command_actions.py  command_class.py  command_handlers.py  command_map.py  command_scheduler.py  constants.py  data_classes.py  dish_enums.py  dish_mode_model.py  dish_state_transition.py  fanned_out_command.py  is_allowed_rules.py  transition_rules.py
src/ska_mid_dish_manager/utils/: __init__.py  action_helpers.py  command_class.py  command_logger.py  decorators.py  helper_module.py  input_validation.py  method_calls_store_helper.py  (+4 more)
tests/: __init__.py  conftest.py  constants.py  dummy.py  performance_analysis_device_monitor.py  requirements.txt  test_dish_manager.py  test_dummy.py  utils.py  utils_testing.py
tests/acceptance/: README.md  __init__.py  conftest.py  test_a.py  test_a_interface_and_startup_check.py  test_abort.py  test_abort_commands.py  test_apply_pointing_model.py  test_attenuation_spfrx.py  test_attr_event_conf.py  test_attr_quality_handling.py  test_b5dc_attrs.py  test_capability_state.py  test_change_events.py  test_command_timeout.py  test_config_band.py  test_configured_band.py  test_connection_verification.py  test_deactivating_sub_devices.py  test_device_monitor.py  test_dish_manager_availability.py  test_dish_manager_cm_threads_handling.py  test_dish_manager_interface.py  test_dish_manager_maintenance.py  test_dish_manager_standby_fp.py  test_dish_manager_standby_lp.py  test_ds_component_manager.py  test_dsc_ctrl_state.py  test_dsc_power_limit.py  test_dsccmdauth_attribute.py  test_five_point_calibration_scan.py  test_global_pointing_model.py  test_healthinfo.py  test_ignore_5bdc.py  test_ignore_flag_db_fetch.py  test_ignoring_sub_devices.py  test_incorrect_apply_pointing_model.py  test_last_command_failure.py  test_local_pointing_model.py  test_maintenance_mode.py  (+34 more)
tests/data/: UpDownleftRight_no_tai.csv  __init__.py  cardioid_scan.csv  coeff_order.json  incorrect_antenna.json  incorrect_band.json  incorrect_total_coeff.json  missing_units.json  missing_values.json  radial.csv  raster_scan.csv  sidereal_tt_3mins.csv  spiral.csv
tests/features/: XTP-3090.feature  XTP-5414.feature  XTP-5703.feature  XTP-6269.feature  XTP-6270.feature  XTP-6271.feature  XTP-6439.feature  XTP-813.feature
tests/lmc-tests/: conftest.py  dish_enums.py  utils.py
tests/scheduled/: test_stress_test_dish_pointing.py  test_track_patterns.py
tests/unit/: __init__.py  conftest.py  test_achieved_pointing_updates.py  test_archive_events.py  test_attr_command_logging.py  test_capability_states.py  test_chart.py  test_command_map_deactivate_devices.py  test_command_map_deactivation.py  test_command_map_ignoring_devices.py  test_configure_band_cmd.py  test_connection_states.py  test_desired_pointing_updates.py  test_dish_component_manager.py  test_dish_manager.py  test_dish_mode_model.py  test_quality_update.py  test_set_k_value.py  test_set_operate_mode.py  test_set_standby_fp.py  test_set_standby_lp.py  test_standby_fp.py  test_standby_lp.py  test_state_transition_rules.py  test_stow_mode.py  test_tango_device_component_manager.py  test_track_cmd.py  test_track_stop_cmd.py
(+320 files in other folders)
