[tool.poetry]
name = "ska-mid-dish-manager"
version = "2.5.0"
description = "SKA Dish Manager TANGO device server"
authors = ["Team Karoo"]
license = "BSD-3-Clause"
readme = 'README.md'
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
packages = [
    { include = "ska_mid_dish_manager", from = "src" }
]
include = [
    { path = 'tests'},
]

[tool.poetry.scripts]
DishManagerDS = 'ska_mid_dish_manager.devices.DishManagerDS:main'

[[tool.poetry.source]]
name = 'ska-nexus'
url = 'https://artefact.skao.int/repository/pypi-internal/simple'

[[tool.poetry.source]]
name = "PyPI-public"
url = 'https://pypi.org/simple'

[tool.poetry.dependencies]
python = "~3.10"
pytango = "9.4.2"
ska-ser-logging = "^0.4.1"
ska-tango-base = "0.20.2"
ska-tango-testing = "0.2.0"
pytest-timeout = "^2.1.0"
networkx = "2.6.3"
rule-engine = "^3.5.0"
numpy = "1.23.0"
typing-extensions = "^4.3.0"
astropy = "^6.0.0"

[tool.pylint.messages_control]
disable = ["duplicate-code", "fixme"]

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.6.4"
flake8 = "^3.8.4"
pylint = "^2.17.2"
coverage = "^6.1.1"
pytest = "^7.1"
unittest2 = "^1.1.0"
pytest-cov = "^2.10.1"
pytest-repeat = "^0.9.1"
pylint-junit = "^0.3.2"
pytest-json-report = "^1.4.1"
pytest-forked = "^1.4.0"
pytest-mock = "^3.9.0"
mock = "^4.0.3"
tango-simlib = "^0.9.4"
requests = "^2.28.1"
mypy = "^0.982"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
docutils = "< 0.20"
Sphinx = "^5.3.0"
ska-ser-sphinx-theme = "^0.1.2"
sphinx-copybutton = "*"
sphinx-tabs = "*"
sphinx-autodoc-typehints = "*"
sphinxcontrib-plantuml = "*"
typing_extensions = "*"

[tool.pytest.ini_options]
testpaths = "tests"
addopts = "--forked --json-report --json-report-file=build/reports/report.json --cov-report html:build/htmlcov --cov-report xml:build/reports/code-coverage.xml --cov-report term:skip-covered --cov=ska_mid_dish_manager --junitxml=build/reports/unit-tests.xml --verbose"
console_output_style = "progress"
junit_family = "legacy"
markers = [
    "unit",
    "acceptance",
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 99

[tool.black]
line-length = 99

[tool.flake8]
max-line-length = 99

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
data_file = ".coverage/.coverage"
branch = true
source = ["ska_mid_dish_manager"]

[tool.coverage.report]
show_missing = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
