[project]
name = "ska-mid-dish-manager"
version = "9.4.0rc3"
description = "SKA Dish Manager TANGO device server"
authors = [{ name = "Team Karoo" }]
maintainers = [{ name = "Team Karoo" }]
license = "BSD-3-Clause"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
packages = [
    { include = "ska_mid_dish_manager", from = "src" },
]
include = [
    { path = "tests" },
]
requires-python = ">=3.10,<4.0"
package-mode = false

[project.urls]
Documentation = "https://developer.skao.int/projects/ska-mid-dish-manager/en/latest/?badge=latest"
Repository = "https://gitlab.com/ska-telescope/ska-mid-dish-manager"

[project.scripts]
DishManagerDS = "ska_mid_dish_manager.devices.DishManagerDS:main"
DishManager = "ska_mid_dish_manager.devices.DishManagerDS:main" # Workaround for tangodocgen

[tool.poetry.dependencies]
pytango = "10.1.4"
numpy = "2.2.0"
ska-control-model = ">=1.0.0"
ska-ser-logging = ">=0.4.1"
ska-tango-base = "1.3.2"
networkx = "2.6.3"
rule-engine = "3.5.0"
astropy = ">=6.0.1"
typing-extensions = ">=4.3.0"
ska-mid-dish-dcp-lib = "0.0.9"

[[tool.poetry.source]]
name = "ska-nexus"
url = "https://artefact.skao.int/repository/pypi-internal/simple"
priority = "primary"

[[tool.poetry.source]]
name = "pypi-public"
url = "https://pypi.org/simple/"
priority = "supplemental"

[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
isort = "^5.6.4"
flake8 = "^3.8.4"
pylint = "^2.17.2"
pylint-junit = "^0.3.2"
mypy = "^0.982"
ruff = "^0.12.0"

[tool.poetry.group.test.dependencies]
coverage = "^6.1.1"
pytest = "^7.1"
unittest2 = "^1.1.0"
pytest-cov = "^2.10.1"
pytest-repeat = "^0.9.1"
pytest-json-report = "^1.4.1"
pytest-forked = "^1.4.0"
pytest-mock = "^3.9.0"
pytest-timeout = "^2.1.0"
mock = "^4.0.3"
tango-simlib = "^0.9.4"
requests = "^2.28.1"
ska-tango-testing = "0.9.0"
matplotlib = "^3.10.3"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
docutils = "< 0.20"
Sphinx = "^5.3.0"
ska-ser-sphinx-theme = "^0.2.1"
sphinx-copybutton = "*"
sphinx-tabs = "*"
sphinx-autodoc-typehints = "*"
sphinxcontrib-plantuml = "*"
typing_extensions = "*"
ska-tango-difdoc = "^0.5.0"

[tool.pytest.ini_options]
testpaths = "tests"
addopts = "--json-report --json-report-file=build/reports/report.json --cov-report html:build/htmlcov --cov-report xml:build/reports/code-coverage.xml --cov-report term:skip-covered --cov=ska_mid_dish_manager --junitxml=build/reports/unit-tests.xml --verbose"
console_output_style = "progress"
junit_family = "legacy"
markers = [
    "unit",
    "acceptance",
    "stress",
    "track_patterns",
    "movement",
    "acceptance_incl_b5dc",
]
log_cli = true # show logs if test fails
log_cli_level = "ERROR"

[tool.ruff]
exclude = [
    ".eggs",
    ".git",
    ".git-rewrite",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    ".vscode",
    ".make",
    "build",
    "dist",
    "docs",
    "notebooks",
    "resources",
    "scripts",
]
line-length = 99
indent-width = 4

[tool.ruff.lint]
select = [
    "A",  # flake8-builtins
    "D",  # pydocstyle
    "E",  # pycodestyle-error
    "W",  # pycodestyle-warning
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "PL", # pylint
]
ignore = [
    "D205",    # 1 blank line required between summary line and description
    "D419",    # Docstring is empty
    "D401",    # Imperitive mood first line
    "PLR2004", # Magic constant
    "D104",    # Missing docstring in public package
    "D101",    # Missing docstring in public class
    "D102",    # Missing docstring in public method
    "D107",    # Missing docstring in `__init__`
    "D103",    # Missing docstring in public function
    "D105",    # Missing docstring in magic method
    "D100",    # Missing docstring in public module
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments in function definition
    "PLR0915", # Too many statements
    "N802",    # Function name should be lower case
    "D404",    # First word should not be "This"
    "N806",    # Variable in function should be lowercase
    "N811",    # Constant imported as non-constant
    "N999",    # Invalid module name
    "PLR0911", # Too many return statements
]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 70

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 99

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
data_file = ".coverage/.coverage"
branch = true
source = ["ska_mid_dish_manager"]

[tool.coverage.report]
show_missing = false

[tool.tangodifdoc.DishManager.properties]
ReceptorNumber = "001"
SkaLevel = 1
LoggingTargetsDefault = "tango::logger"
LoggingLevelDefault = 5
MaxCapabilities = "BANDS:6"
GroupDefinitions = ""
DSDeviceFqdn = "a/b/c"
SPFDeviceFqdn = "a/b/c"
SPFRxDeviceFqdn = "a/b/c"
B5DCDeviceFqdn = "a/b/c"
DishId = "SKA001"
DefaultWatchdogTimeout = 0
MeanWindSpeedThreshold = 11
WindGustThreshold = 16
WMSDeviceNames = []
DefaultActionTimeoutSeconds = 120

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"